# ai

./: .gitignore  main.py  pyproject.toml  pythonstudy.ipynb  pytorchstudy.ipynb  test.py  trade.py
gostudy/: go.mod  main.go
gostudy/ai/: ai.go
gostudy/tools/: tools.go
