[project]
name = "pytorchstudy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy<2",
    "opencv-python>=4.11.0.86",
    "torch==2.2.2",
    "torchaudio==2.2.2",
    "torchvision==0.17.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
